z-index bug

--- a/website/src/component/HomeContent/ContentCover.sass
+++ b/website/src/component/HomeContent/ContentCover.sass
@@ -79,7 +79,7 @@ $airbnb-font: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sa
         overflow-x: hidden
         overflow-y: auto
         list-style: none
-        z-index: 5
+        z-index: 101
         -webkit-transition: max-height 0.2s, border 0.2s
         transition: max-height 0.2s, border 0.2s
       .geosuggest__suggests--hidden 
